--- a/Module 1 - Asynchronous Fundamentals/Assignment - Stopwatch/index.html
+++ b/Module 1 - Asynchronous Fundamentals/Assignment - Stopwatch/index.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Stopwatch</title>
+  <title>Stopwatch Demo</title>
 </head>
 
 <body>
 
   <h1>Stopwatch Demo</h1>
 
-  <p id="timer"></p>
+  <p id="timer">0</p>
 
-  <button id="startStop"></button>
-  <button id="reset"></button>
-  <button id="record"></button>
+  <button id="startStop">Start/Stop</button>
+  <button id="reset">Reset</button>
+  <button id="record">Record Time</button>
 
   <p>Past Times</p>
-  <ul>
+  <ul id="list" style="list-style: none; padding: 8px">
     
   </ul>
 
